log
Wed, Apr 16, 2025  9:07:01 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  9:07:52 AM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8854111
Sun, Apr 20, 2025 11:18:47 PM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  5|4
total_score: 30/70
fef25be
Sun, Apr 20, 2025 11:25:12 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|4
total_score: 30/70
abef2b9
Sun, Apr 20, 2025 11:27:02 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
f5fa64c
Sun, Apr 20, 2025 11:33:06 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:96:27: error: lvalue required as left operand of assignment
     if(key == NULL || map = NULL)return NULL;
                           ^
hashmap.c:100:29: error: expected ')' before numeric constant
     while(map->buckets[pos] 1 != NULL)
                             ^
4774c8c
Sun, Apr 20, 2025 11:33:15 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:96:27: error: lvalue required as left operand of assignment
     if(key == NULL || map = NULL)return NULL;
                           ^
17d0bd6
Sun, Apr 20, 2025 11:33:26 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
88eead8
Sun, Apr 20, 2025 11:44:17 PM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:68:21: error: 'pair' undeclared (first use in this function)
     map->buckets = (pair**)calloc(map->capacity, sizeof(Pair*)) ;
                     ^~~~
hashmap.c:68:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:68:27: error: expected expression before ')' token
     map->buckets = (pair**)calloc(map->capacity, sizeof(Pair*)) ;
                           ^
hashmap.c:74:21: error: 'i' undeclared (first use in this function)
         if (antiguo[i] != NULL && antiguo[i]->key != NULL)
                     ^
dbfd754
